feat: harden Collab workflows and notifications